--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/bpiper91/jest-another-RPG#readme",
   "dependencies": {
+    "inquirer": "^8.2.4",
     "jest": "^28.1.3"
   }
 }
